--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 html{
     background-image: url(assets/imgs/kitchen-and-cooking-background.png) ;
     background-attachment: fixed;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+}
+
+li{
+    padding: 5px;
 }
 
 .encabezado{
@@ -26,13 +32,55 @@ html{
     border-radius: 20px;
 }
 
-.receta-img{
-    width: auto;
+.contenedor{
+    display: flex;
+}
+
+.indice{
+    align-self: flex-start;
+}
+
+.indice a{
+    text-decoration: none;
+    color: inherit;
+}
+
+.receta{
+    background-color: rgba(0, 88, 99, 0.4);
+    display: flex;
+    flex-direction: column;
+}
+
+.receta img{
+    width: max-content;
     height: 300px; 
+}
+
+.receta-tablaNutricional table{
+    border-collapse: collapse;
+}
+
+.receta-tablaNutricional th, td {
+    border: 1px solid #000;
+    padding: 10px;
+}
+
+.receta-tablaNutricional thead>tr>td{
+    font-weight: bold;
+}
+
+.receta-tablaNutricional td:first-child {
+    font-weight: bold;
 }
 
 
 
+
+
+aside a{
+    text-decoration: none;
+    color: inherit;
+}
 
 
 
@@ -41,4 +89,16 @@ footer{
     background-color: white;
     justify-content: center;
     gap: 20px;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+footer a{
+    text-decoration: none;
+    color: inherit;
+}
+
+footer a:hover {
+    text-decoration: underline;
+    color: red;
 }
